--- a/css/projetP2.css
+++ b/css/projetP2.css
@@ -1,4 +1,5 @@
 /*----------------MenuBar----------------------*/
+
 .menu2{
     width: 20%;
     height: 20%;
@@ -17,7 +18,7 @@
 .menuLine{
     display: inline-block;
     position: relative;
-    left: 47%;
+    left: 46%;
     top: 5px;
     z-index: 2
 }
@@ -172,7 +173,7 @@ font: 15px/15px helvetica;
 .border{
     display: inline-block;
     border: 1px solid;
-    padding: 20px 20px 23px 20px;
+    padding: 20px 40px 23px 20px;
     background-color: white;
     border-color: white;
     
@@ -180,7 +181,7 @@ font: 15px/15px helvetica;
 
 .border:hover{
     border: 1px solid;
-    padding: 20px 20px 50px 20px;
+    padding: 20px 40px 80px 20px;
     background-color: white;
     border-color: #dbdbdb;
     border-bottom: 3px solid;
@@ -194,6 +195,7 @@ font: 15px/15px helvetica;
     display: inline-block;
     background-size: 23px; 
     margin-top: 10px;
+    margin-left: -3px;
 }
 
 .loupe{
@@ -226,6 +228,7 @@ font: 15px/15px helvetica;
     background: url(../img/shopping-cart1.png) no-repeat;
     /*margin-left: 20px;*/
     top: -18px;
+    visibility: hidden;
 }
 
 .shop:hover{
@@ -477,150 +480,72 @@ font: 15px/15px helvetica;
 .infoimg{
     width: 32px;
 }
-
-/*----------slider--------------------*/
-#swipper{
-    height: 471PX;
+/*----------page--------------------*/
+#section2{
+    height: 1450px;
+    width: 100%;
     
 }
 
-.swiper-container {
-        width: 100%;
-        height: 100%;
-        top: -24px;
-        z-index: -1;
-        position: relative;
-        overflow: hidden;
-        
-    }
-#swiperid{
-    z-index: -1;
-}
-    .swiper-slide {
-        text-align: center;
-        font-size: 18px;
-        background: #fff;
-        /* Center slide text vertically */
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        -webkit-justify-content: center;
-        justify-content: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        -webkit-align-items: center;
-        align-items: center;
-    }
 
-.imgswipper{
-    width:102.3%;
-}
-/*----------section 1--------------------*/
-#section1{
-    margin-top: 60px;
-    height: 608Px;
-}
-.blocnew{
-    width: 70%;
+.nekfeu{
+    width: 100%;
     position: relative;
-    left: 15%;
-}
-.line{
-    width: 45px;
-    background-color: #Fc3c3c;
-    height: 3px;
-}
-
-.blocnew h2{
-    font-family: 'Raleway', sans-serif;
-    font-weight: bolder;
-    font-size: 25px;
-    margin-top: 10px
+    top: -29px;
+    z-index: -1;
 }
 
 .blocAlbum{
-    width: 70%;
-    position: relative;
-    left: 15%;
-    margin-top: 15px;
-}
-.artisteBloc{
-    width: 170px;
-    text-align: center;
-    display: inline-block;
-    margin-right: 5px;
-    margin-bottom: 30px;
-}
-
-.playCache:hover{
-width:120%;
-}
-.cache::after {
-    position: absolute;
-    top: 104px;
-    z-index: 1;
-    display: none;
-}
-.cache:hover::after{
-    display: block;
+    width: 80%;
+    height: 800px; 
+    margin-left: 10%;
+    background-color: white;
     
 }
 
-.link_album {
-    text-decoration: none;
+.blocT-I{
+    width: 100%;
+    height: 205px;
+;
 }
 
-
-
-
-.img2Album{
-    position: relative;
+.albumNekfeu{
+    width: 20%;
 }
 
-.img2Album::before{
-    content : ' ';
-    width: 170px;
-    height: 170px;
-    background: rgba(0,0,0,0.7);
+.blocT1{
+    display: inline-block;
     position: absolute;
-    display: none;
-    z-index: 2;
+    width: 20%;
 }
+    .type{
+        font-family: 'Montserrat', sans-serif;
+        color: #6d6d6d;
+        margin-top: 15px;
+    }
+    .tAlbum{
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
+        font-size: 50px;
+        margin-top: 15px;
+    }
+    .tArtist{
+        font-family: 'Montserrat', sans-serif;
+        color: #6d6d6d;
+        margin-top: 16px;
+    }
+        .deco{
+            text-decoration: none;
+            color:black;
+        }
+        .deco:hover{
+            border-bottom: 1px solid;
+        }
 
-.img2Album:hover::before{
-    display: block;
-}
 
-.img2Album .cache{
-    position: absolute;
-    left: 69px;
-    top: 73px;
-    z-index: 2;
-    display: none;
-}
-
-.img2Album:hover .cache{
-    display: block
-}
-
-
-
-.titreAlbum{
-    font-family: 'Montserrat', sans-serif;
-    margin-top: 5px;
-    color: black;
-}
-.artisteAlbum{
-    font-family: 'Open Sans Condensed', sans-serif;
-    margin-top: 3px;
-    letter-spacing: 1px;
-    color: #dbdbdb;
-}
 .plus{
-    margin-left: 781px;
+    margin-top: 15px;
+    height: 50px;
 }
 .plus a{
     text-decoration: none;
@@ -629,156 +554,249 @@ width:120%;
    font-family: 'Montserrat', sans-serif;
     display: inline;
     border-radius: 42px;
-    padding: 8px 100px 8px 100px;
-    color: #Fc3c3c;
+    padding: 8px 50px 8px 50px;
+    color: white;
     font-size: 15px;
     position: absolute;
-    border:1px solid;
-    border-color: #Fc3c3c;
+    background-color: #Fc3c3c;
 
 }
 .more:hover{
     font-size: 18px;
-    border: 2px solid;
 }
 
-/*----------section 2--------------------*/
-
-#section2{
-    margin-top: 60px;
-    height: 534px;
-}
-.blocAmbiance{
-    width: 70%;
-    position: relative;
-    left: 15%;
-    margin-top: 15px;
-}
-.genreBloc{
-    width: 170px;
-    text-align: center;
-    display: inline-block;
-    margin-right: 5px;
-    margin-bottom: 30px;
-}
-.genreBloc a{
-    text-decoration: none;
-}
-.titleGenre{
-    position: relative;
-    top: -56px;
-    font-family: 'Open Sans Condensed', sans-serif;
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    letter-spacing: 1.5px;
-    left: 3px;
-    text-decoration: none;
-}
-.titleGenre:hover{
-    border-bottom: 2px solid;
-    border-color: white;
-    text-decoration: none;
+#more2{
+    padding: 7px 50px 7px 50px;
+    left: 278px;
+    color:#Fc3c3c;
+    background-color: white;
+    border: 1px solid;
+    border-color:#Fc3c3c;
 }
 
-/*----------section 3--------------------*/
-#section3{
-    margin-top: 60px;
-    height: 540px;
+
+#listM{
+    width: 100%;
+    height: 460px;
+    margin-top: 30px;
+    transition: all 2s ease-in-out;
 }
-.swiper-container2 {
-        width: 85%;
-        left:95px;
-        margin: 20px auto;
-        margin-top: 0px;
-        overflow: hidden;
+
+.description {
+    display: -webkit-inline-box;
+    margin-left: 10px;
+}
+    .dieze{
+        margin-right: 170px;
+        font-family: 'Open Sans Condensed', sans-serif;
+        font-size: 20px;
+    }
+    .titreC{
+        margin-right: 720px;
+        font-family: 'Open Sans Condensed', sans-serif;
+        font-size: 20px;
+    }
+    .time{
+        width: 65%;
     }
 
-    .swiper-slide {
-        margin-right: 15px;
-        text-align: center;
-        font-size: 18px;
-        background: #fff;
-        
-        /* Center slide text vertically */
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        -webkit-justify-content: center;
-        justify-content: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        -webkit-align-items: center;
-        align-items: center;
-         margin-right:none
-    }
-
-
-
-    
-.playlist{
-    background-color: #dbdbdb;
-    width: 270px;
-    height: 450px;
-    margin-top: 60px;
+.allTitre{
+    display: -webkit-inline-box;
+    padding-left: 10px;
+    border-top: 1px solid;
+    width: 100%;
 }
-.playlist a {
-    text-decoration: none;
-}
-
-.mg{
-    width: 270px;
-    height:270px;
-    background-color: red;
-}
-
-#next{
-    top: 1960px;
-    left: 1080px;
-    background-image: none;
-}
-#prev{
-    top: 1960px;
-    left: 1000px;
-    background-image: none;
-}
-
-
-.type {
-    color:white;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-    font-size: 17px;
-    text-align: left;
-    margin-left: 5px;
-    margin-top: 10px;
-}
-
-.para1{
-    font-family: 'Open Sans Condensed', sans-serif;
-    text-align: left;
-    line-height: 1.3;
-    font-size: 14px;
-    margin-left: 5px;
-    margin-top: 36px;
-    color: black;
-}
-
-.abonne{
-    font-family: 'Roboto', sans-serif;
-    display: block;
-    position: absolute;
-    top: 95%;
-    left: 28%;
-    color: black;
+.allTitre:hover{
+    background-color:#dbdbdb;
     
 }
 
+
+.number1{
+    padding-right: 70px;
+    padding-top: 7px;
+    width: 7%;
+}
+
+.number2{
+    position: relative;
+    top: 10px;
+    left: 10px;
+}
+
+
+.play1{
+    padding-right: 68px;
+    top: -8px;
+    position: relative;
+    width: 8%;
+    text-align: left;
+    left: 85px;
+}
+.titre1{ 
+    padding-top: 7px;
+    width: 75%;
+
+}
+
+.titre1_{ 
+    /* padding-top: 7px; */
+    width: 75%;
+    position: relative;
+    top: -30px;
+    left: 188px;
+}
+
+.time1{
+   padding-top: 7px;
+}
+
+#listM div {
+     height: 34px;
+    width: 100%;
+    /* border-top: 1px solid; */
+    border-bottom: 1px solid;
+}
+
+#listM div a {
+    text-decoration: none;
+    color:black;
+    font-family: 'Montserrat',sans-serif;
+    text-transform: uppercase;
+    font-size:14px;
+}
+
+.active2 {
+    height: 80px;
+    width: 500px;
+    left: -5%;
+    position: relative;
+    -webkit-transition: all 0.8s;
+    /* text-align: left; */
+    transform: scale(1.1);
+}
+
+.duration {
+    position: relative;
+    text-align: right;
+    top: -44px;
+    right: 183px;
+}
+
+.fix2 {
+    position: fixed;
+    height: 83%;
+    width: 82%;
+    top: 79%;
+    left: 17%;
+    margin: 0 auto;
+}
 /*----------FOOTER--------------------*/
 
 #footer{
+    height: 200px;
+    border-top: solid 1px;
+    border-color: #dbdbdb;
+}
+
+.imglogo2{
+    width: 11%;
+    margin-left: 30px;
+    top: 35px;
+    position: relative;
+}
+.blocFooter{
+    position: relative;
+    top: -82px;
+    left: 346px;
+    width: 40%;
 
 }
+
+.societe{
+    display: inline-block;
+    margin-right: 50px;
+}
+.societe h4{
+    font-family: 'Raleway', sans-serif;
+    color: #Fc3c3c;
+    font-weight: bold;
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+.footerP{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 13px;
+    margin-bottom: 10px;
+}
+.footerP:hover{
+    color:#Fc3c3c;
+}
+
+.deco{
+    text-decoration: none;
+    color: black;
+}
+
+.social{
+    position: relative;
+    top: -169px;
+    left: 1001px;
+    width: 220px;
+}
+ul {
+  margin:0;
+  padding:0;
+}
+
+ul li {
+  list-style:none;
+  margin:0;
+  padding:5px;
+  display:inline-block;
+  height:50px;
+  width:50px;
+}
+
+svg {
+	height:50px;
+	width:30px;
+	fill: black;
+	-webkit-transition-property: all;
+	-webkit-transition-duration: 0.2s;
+	cursor:pointer;
+}
+#facebook{
+        width: 16px;
+}
+
+svg:hover {
+	fill:#Fc3c3c;
+}
+
+svg:active {
+	fill:#00aeef;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
